Murphy System/archive/artifacts/outputs/workspace_output_1769112380_9805.txt
/tmp/test.js:1
    <script>
    ^

SyntaxError: Unexpected token '<'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.6
